# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: my_linter.yml
brain_games/: cli.py  engine.py  formulas.py  game_engine.py
brain_games/games/: calc.py  even.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
