[tool.poetry]
name = "zavr_brain_games"
version = "0.1.0"
description = ""
authors = ["Anton <zavr35rus@gmail.com>"]
packages = [
    { include = "brain_games" },
]

[[tool.poetry.source]]
name = "test_pypi"
url = "https://test.pypi.org/legacy/"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

